teleforma/static/teleforma/css/teleforma.css
body {margin: 0; padding: 0;}
a {text-decoration: none; color: #969696;}
a img {border: none;}
html, input, select, textarea, h1, h2, h3, h4, h5, h6 {
    font-size: 100%;
}
body {
    font: 0.8125em/1em Verdana, sans-serif;
    line-height: 1.3em;
    color: #333;
    background: #FFF;
    margin: 0em;
    background:no-repeat url(/static/telemeta/images/bg_yt.png) 0 0;
    background-color:#ebebeb;
    background-repeat:repeat
}

/* LAYOUT  (sticking footer) */

* {
margin: 0;
}

html, body {
height: 100%;
}

#layout {
min-height: 100%;
height: auto !important;
height: 100%;
margin: 0 auto -58px;
}

#footer {
height: 30px;
}



/*a:link, a:visited {
    color: #BB0000;
    text-decoration:none;
}
a:link:hover, a:visited:hover {
    background-color: transparent;
    color: #BB0000;
    text-decoration: underline;
}*/
a, a:visited {
    color: #355ea2;  /* #BB0000  #030250 */
    text-decoration:none;
}
a:hover {
    background-color: transparent;
    color: #355ea2 ; /* #BB0000 #4888f0 */
    text-decoration: underline;
}

a img { border: none; }

.rst-content h1 {
    font-size: 1.2em;
    font-weight: bold;
    color: #353535;
}
.nett {
    clear: both;
    height: 0em;
}

.wazing {
    clear: both;
    position: relative;
}

/* Min-width */
#layout {
    min-width: 740px;
}

#content {
    /*margin-top: 1em;*/
    position: relative;
    margin-left: 3%;
    margin-right: 2em;
    margin-bottom: 0em;
}

#content ul, #content ul ul, #content ol {
    list-style: square;
    padding: .5em;
    padding-left: 2em;
    font-size: 1em;
    clear: both;
}

#content ul ul {
    font-size: 0.9em;
    padding-left: 0em;
    list-style: circle;
}

#content li {
    padding: .2em;
    padding-left: 0em;
}

#content li a {
    padding: .1em 0em;
}

#content h1 {
    color: #000000;
    font-weight: bold;
    display:  inline;
    font-size: 1.2em;
}

#content h3 {
    color: #000000;
    font-weight: bold;
    display:  inline;
}

#content h2 {
    color: #000000;
}

#logo_wrapper {
    width: 2%;
    margin: 0em auto;
    float: left;
}

#logo {
    width: 2%;
    margin:0em auto;
    padding-top: 0.6em;
    padding-bottom: 0.5em;
    }

#logo a, #logo a:hover { border: none; background: transparent; }

#header {
    padding: 0em;
/*     background: url("/static/telemeta/images/waves.png") 100% 0% no-repeat; */
}

#content_header, #header{
    margin-bottom: .8em;
}

#content_header{
    width:100%;
    border-collapse:collapse;
}

#content_header td{
    vertical-align: top;
}

#content_header td.rightcol{
    text-align:right;
    white-space:nowrap; /**this implies to stretach righcol to accomodate all the width,
                        UNLESS there is a div.fixedWidthAsPlayer inside td.rightcol (see blow)*/
}

#content_header td.rightcol div.fixedWidthAsPlayer{
    width:374px; /*must be width+2*padding, see #rightcol below*/
    float:right;
    white-space:normal; /*to override no-wrap defined in #content_header td.rightcol*/
}

#content_header td.rightcol div.fixedWidthAsPlayer a{
    display:inline-block;
    margin-top:0.5ex;
}

#rightcol {
    width: 362px; /**if u change this, change also width #content_header td.rightcol, see above*/
    padding: 6px; /**if u change this, change also width #content_header td.rightcol, see above*/
    position: relative;
    z-index: 1;
    float: right;
    border: 1px solid #999;
    background-color: #eee;
    -moz-border-radius: 8px 0px 8px 8px;
    -webkit-border-radius: 8px 0px 8px 8px;
    border-radius: 8px 0px 8px 8px;
}

#rightcol .analyzer, #rightcol .exporter, .markers {
    text-align: left;
    position: relative;
}

#rightcol form {
    width: 360px;
    margin-top: 5px;
    background-color: #fff;
    border: 1px solid #adadad;
}

#rightcol p {
    margin: 0;
    padding: 0;
}

#collection_player {
    background: transparent;
    /*     background-image: url(/static/telemeta/images/grid_bg_2.png); */
}

#collection_player .title {
    padding: 2px 5px 7px 5px;
}


.exporter {
    background-color: #fff;
    border: 1px solid #adadad;
    padding: 2px;
    height: 26px;
    margin: 5px 0 0;
    font-size: 0.9em;
    color: #000;
    font-weight: bold;
}

.analyzer, .markers {
    background-color: #fff;
    color: #000;
    border: 1px solid #adadad;
    width: 356px;
    padding: 2px;
    /* margin: 5px 0 0; */
    font-size: 1em;
}

.markers {
    max-height: 500px;
    overflow-y: scroll;
}

.vscroll {
    max-height: 300px;
    overflow-y: scroll;
    width: 100%;
}


.analyzer-title {
    background-color: #f2f2f2;
    color: #000;
    padding: 2px;
}

.analyzer-line {
    background-color: #fdfdfd;
    color: #000;
    padding: 4px;
}

/* Geographic navigator */
ul.continents, ul.continents ul { list-style: none; margin: 0; padding: 0;}
ul.continents { margin: 1em 0; }
ul.continents ul {margin-left: 0; margin-bottom: 0.9em; padding: 0 1em 1em 0;}
ul.continents li.name { width: 460px; float: left; clear: left; margin-right: 30px;}
ul.continents li.odd { clear: none;}
ul.continents li.name b { font-size: 120%; font-weight: bold; }
ul.continents ul li { display: inline; padding-right: 2em;}
ul.continents ul li a { line-height: 1.8em; }

/* Collection */
#content .intro {
    font-size: 1em;
    font-weight: bold;
    color: #444;
    margin: 5px 0;
    font-size: 0.8em;
}
#content .intro span {
    padding: 3px;

}

/* Forms */
input, textarea, select { margin: 2px }
input, select { vertical-align: middle }
input[type=button], input[type=submit], input[type=reset] {
    background: #f2f2f2;
    color: #444;
    border: 3px double #ccc;
    padding: .1em .5em;
    font-weight: bold;
    cursor: pointer;
    -moz-border-radius: 8px 0px 8px 8px;
     -webkit-border-radius: 8px 0px 8px 8px;
     border-radius: 8px 0px 8px 8px;
    }

}
input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
    background: #8D8C94;
    color: #fff;
}
/* ... */

